scripts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.172.19.0.5.nip.io
    http:
      paths:
      - backend:
          service:
            name: keycloak-headless
            port:
              number: 8080
        path: /
        pathType: Prefix
